--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ resilient network.
 						<ul>
 							<li><a href="#intro" class="active">About</a></li>
 							<li><a href="#map">Map</a></li>
-							<li><a href="#blog">Blog</a></li>
+							<li><a href=/blog>Blog</a></li>
 							<li><a href="#join">Join</a></li>
 							<li><a href="#support">Support</a></li>
 							<li><a href="#donate">Donate</a></li>
@@ -77,17 +77,7 @@ NYC Mesh is a not-for-profit organization with fiscal sponsorship through the <a
 	<h2>Map</h2></header>
 
 </section> 
-
-						<!-- blog Section -->
-							<section id="blog" class="main special">
-								<header class="major">
-									<h2>Blog</h2>
-								</header>
-								<p>Check out our latest blog here.
-
- </p>
-								
-							</section>
+		
 
 						
 
